docs: added readme and reorg folder structure

--- a/main.ipynb
+++ b/main.ipynb
@@ -227,7 +227,7 @@
    ],
    "source": [
     "# read an excel file into a pandas dataframe\n",
-    "df_gitcoin = pd.read_csv('vote_coefficients_input.csv')\n",
+    "df_gitcoin = pd.read_csv('./input/vote_coefficients_input.csv')\n",
     "df_gitcoin.head()"
    ]
   },
@@ -308,7 +308,7 @@
    "source": [
     "# get table of valid tec holders\n",
     "# extracted from https://dune.com/queries/2457553/4040451\n",
-    "df_tec = pd.read_csv('tec_holders.csv')[['address','tec_tokens_flag']]\n",
+    "df_tec = pd.read_csv('./input/tec_holders.csv')[['address','tec_tokens_flag']]\n",
     "df_tec.head()"
    ]
   },
@@ -389,7 +389,7 @@
    "source": [
     "# get table of te academy token holders\n",
     "# extracted from https://dune.com/queries/2457581\n",
-    "df_tea = pd.read_csv('tea_holders.csv')[['wallet','tea_flag']]\n",
+    "df_tea = pd.read_csv('./input/tea_holders.csv')[['wallet','tea_flag']]\n",
     "df_tea.head()"
    ]
   },
@@ -1118,7 +1118,7 @@
    "outputs": [],
    "source": [
     "# save the dataframe to a csv file\n",
-    "df_output.to_csv('vote_coefficients_output.csv', index=False)"
+    "df_output.to_csv('./output/vote_coefficients_output.csv', index=False)"
    ]
   },
   {
