--- a/README
+++ b/README
@@ -13,6 +13,9 @@ You will find all the necessary information, statistics and process in the ./mai
     or
   - TE Academy Certificate
     (snapshot as of 2023-05-09 23:50 UTC)
+    (based on a combination of):
+    https://dune.com/queries/2457581
+    plus extracts from TEA
 - generate report on round statistics and effect on TE (percentage who have tec / te certificate and donate)
   - ever since the TE Round was announced and carried out, the $TEC price has stabilised and grown.
   - generate chart for unique holders
